# aaalligator

./: Cargo.toml  LICENSE  README.md
examples/: aaa-continuum.rs  aaa-discreet.rs  approx.rs  cont-example.rs  disc-example.rs  parallel.rs  simple.rs
src/: barycentric.rs  complexfunction.rs  continuum_tests.rs  floatingfunction.rs  lib.rs
src/aaa/: continuum.rs  discrete.rs  discrete_auto.rs  fromfn.rs  into.rs  mod.rs  tools.rs
src/types/: bary_c.rs  mod.rs
src/util/: consts_internal.rs  evaluate.rs  mod.rs  plotting.rs
src/util/singularities/: mod.rs  poles.rs  residues.rs  singularities.rs  zeros.rs
