[package]
name = "aaalligator"
version = "0.2.0"
edition = "2024"
authors = ["zinkkkk"]
repository = "https://github.com/zinkkkk/aaalligator"
license = "MIT"
keywords = ["AAA", "Adaptive Antoulas-Anderson", "function approximation", "rational approximation", "rational function", "interpolation", "data fitting", "barycentric"]
readme = "README.md"

[dependencies]
iter_num_tools = "0.7.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
rayon = "1.11.0"
faer = "0.23.2"
plotly = "0.13.5"
hsl = "0.1.1"
serde_core = "1.0.228"
